# nova-mlops

./: .gitignore  .mdl.rb  DESCRIPTION  Makefile  README.md  TODO.md  cpanfile  metadata.xml  mlops.bib  words.dic
.github/workflows/: check-readme.yml  download.yaml  lint-deno.yml  perl.yml  python.yaml
code/: DESCRIPTION  pyproject.toml
code/R/: DESCRIPTION
code/R/R/: download-ukr-mod-data.R
code/R/tests/: testthat.R
code/R/tests/testthat/: test-example.R
code/deno/: download.deno  download.ts
code/perl/: .gitignore  Build.PL  Changes  MANIFEST  MYMETA.yml  Makefile.PL  README.md
code/perl/lib/Data/: OSK.pm
code/perl/t/: 0.t  00.load.t
code/python/: .gitignore  README.md  explore.ipynb  pyproject.toml  test.pkl
code/python/nova_mlops/: __init__.py
code/python/script/: test-neptune-ai.py
data/: explore-data.ipynb
docs/: 00.A-Few-Principles.html  00.Intro.html  00.Principles.html  01.Agile.html  01.Design-Thinking.html  02.Agile.html  02.Design-Thinking.html  03.TDD.html  04.Containers.html  04.Infra.html  05.Containers.html  05.Docker.html  06.MLOps-tools.html  07.Papers.html  header.html  index.html  mlops.css
docs/preso/: 01.html  02.html  03.html  04.html  05.html  README.md  index.html
sessions/: 01.md  02.md  03.md  04.md  05.md  words.dic
t/: just_check.t
text/: .editorconfig  00.A-Few-Principles.md  00.Intro.md  00.Principles.md  01.Agile.md  01.Design-Thinking.md  02.Agile.md  02.Design-Thinking.md  03.TDD.md  04.Containers.md  04.Infra.md  05.Containers.md  05.Docker.md  06.MLOps-tools.md  07.Papers.Rmd  07.Papers.html  07.Papers.md  words.dic
