[tool.poetry]
name = "nova_mlops"
version = "0.1.0"
description = "Example for NOVA MLOps course"
authors = ["JJ Merelo <jjmerelo@gmail.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
neptune-client = "^0.16.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
