[tool.poetry]
name = "nova_mlops"
version = "0.1.0"
description = "Example for NOVA MLOps course"
authors = ["JJ Merelo <jjmerelo@gmail.com>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "~3.9"
neptune-client = "^0.16.2"
python-dotenv = "^0.20.0"
mlflow = "^2.2.1"
numpy = "^1.23.0"
pycaret = "^2.3.10"
pandas = "^1.4.3"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = 'nova_mlops.__init__:go'
